--- a/数字技巧题.md
+++ b/数字技巧题.md
@@ -10,7 +10,7 @@ Because nums[0] + nums[1] = 2 + 7 = 9,
 return [0, 1].
 ```
 
-解法一：暴力法
+## 解法一：暴力法
 ``` c++
 vector<int> twoSum(vector<int>& nums, int target) {
         vector<int> ci ;
@@ -28,13 +28,13 @@ vector<int> twoSum(vector<int>& nums, int target) {
 ```
 算法复杂度：0(n*n)
 
-解法二：分析题目，试图找一些技巧方法，提高算法性能。
-分析：
-A + B = G
-B = G – A
-假设A已知，找对应的B就可以了。
-可以遍历数组，把要寻找对应的B值找出来，放到一个hash_map<B,pos>（pos为当前的下标）中。并且同时检测是否在hash_map中，如果在，则输出结果。
-代码如下：
+## 解法二：分析题目，试图找一些技巧方法，提高算法性能。
+分析：<br>
+A + B = G<br>
+B = G – A<br>
+假设A已知，找对应的B就可以了。<br>
+可以遍历数组，把要寻找对应的B值找出来，放到一个hash_map<B,pos>（pos为当前的下标）中。并且同时检测是否在hash_map中，如果在，则输出结果。<br>
+代码如下：<br>
 ``` c++
 vector<int> twoSum(vector<int>& nums, int target) {
         
@@ -62,5 +62,5 @@ vector<int> twoSum(vector<int>& nums, int target) {
         
     }
 ```
-性能分析：0(n)
+性能分析：0(n)<br>
 空间维护一个map或者hashmap。
