--- a/数字技巧题.md
+++ b/数字技巧题.md
@@ -64,3 +64,181 @@ vector<int> twoSum(vector<int>& nums, int target) {
 ```
 性能分析：0(n)<br>
 空间维护一个map或者hashmap。
+
+# 罗马字符转成数字（Roman to Integer）
+
+Roman numerals are represented by seven different symbols: I, V, X, L, C, D and M.
+```
+Symbol       Value
+I             1
+V             5
+X             10
+L             50
+C             100
+D             500
+M             1000
+```
+For example, two is written as II in Roman numeral, just two one's added together. Twelve is written as, XII, which is simply X + II. The number twenty seven is written as XXVII, which is XX + V + II.
+
+Roman numerals are usually written largest to smallest from left to right. However, the numeral for four is not IIII. Instead, the number four is written as IV. Because the one is before the five we subtract it making four. The same principle applies to the number nine, which is written as IX. There are six instances where subtraction is used:
+
+I can be placed before V (5) and X (10) to make 4 and 9. 
+X can be placed before L (50) and C (100) to make 40 and 90. 
+C can be placed before D (500) and M (1000) to make 400 and 900.
+Given a roman numeral, convert it to an integer. Input is guaranteed to be within the range from 1 to 3999.
+
+## 解法一
+直接解析分析方法
+
+``` c++
+class Solution {
+public:
+    
+    int romanToInt(string s) {
+        
+        return romanToIntk(s,0);
+    }
+    
+    int romanToIntk(string s, int k){
+        
+        
+        //M  1000
+        //CM 900
+        //D  500
+        //CD 400
+        //C  100
+        //XC 90
+        //L  50
+        //XL 40
+        //X  10
+        //IX 9
+        //V  5
+        //IV 4
+        //I  1
+        
+        if(k >= s.size()) return 0;
+        
+        //M
+        if(s.at(k) == 'M' )
+        {
+            return romanToIntk(s, k+1) + 1000;
+        }
+        
+        //CM
+        if(s.at(k) == 'C' && k + 1 < s.size() && s.at(k+1) == 'M')
+        {
+            return romanToIntk(s, k+2) + 900;
+        }
+        
+        //D  500
+        if(s.at(k) == 'D' )
+        {
+            return romanToIntk(s, k+1) + 500;
+        }
+        
+        //CD
+        if(s.at(k) == 'C' && k + 1 < s.size() && s.at(k+1) == 'D')
+        {
+            return romanToIntk(s, k+2) + 400;
+        }
+        
+        //C  100
+        if(s.at(k) == 'C' )
+        {
+            return romanToIntk(s, k+1) + 100;
+        }
+        
+        //XC 90
+        if(s.at(k) == 'X' && k + 1 < s.size() && s.at(k+1) == 'C')
+        {
+            return romanToIntk(s, k+2) + 90;
+        }
+        
+        //L  50
+        if(s.at(k) == 'L' )
+        {
+            return romanToIntk(s, k+1) + 50;
+        }
+        
+        //XL 40
+        if(s.at(k) == 'X' && k + 1 < s.size() && s.at(k+1) == 'L')
+        {
+            return romanToIntk(s, k+2) + 40;
+        }
+        
+        //X  10
+        if(s.at(k) == 'X' )
+        {
+            return romanToIntk(s, k+1) + 10;
+        }
+        
+        //IX 9
+        if(s.at(k) == 'I' && k + 1 < s.size() && s.at(k+1) == 'X')
+        {
+            return romanToIntk(s, k+2) + 9;
+        }
+        
+        //V  5
+        if(s.at(k) == 'V' )
+        {
+            return romanToIntk(s, k+1) + 5;
+        }
+        
+        //IV 4
+        if(s.at(k) == 'I' && k + 1 < s.size() && s.at(k+1) == 'V')
+        {
+            return romanToIntk(s, k+2) + 4;
+        }
+        
+        //I  1
+        if(s.at(k) == 'I' )
+        {
+            return romanToIntk(s, k+1) + 1;
+        }
+        
+        return 0;
+    }
+};
+```
+
+## 解法二
+技巧解法。
+普通解析针对于I，X, C 都需要两个一块先解析，如果匹配对应的两个字符，直接添加对应数值，否则就添加单个对应数值。
+```
+I can be placed before V (5) and X (10) to make 4 and 9. 
+X can be placed before L (50) and C (100) to make 40 and 90. 
+C can be placed before D (500) and M (1000) to make 400 and 900.
+```
+分析发现，I,X,C 搭配的值，都有个规律，比如IV=4, 5（V）+ 1（I）-2*1（I）。
+
+那就引申出如下巧妙解法：
+``` c++
+class Solution {
+public:
+    
+    int romanToInt(string s) {
+        
+        map<char, int> mci;
+        mci.insert({'I',1});
+        mci.insert({'V',5});
+        mci.insert({'X',10});
+        mci.insert({'L',50});
+        mci.insert({'C',100});
+        mci.insert({'D',500});
+        mci.insert({'M',1000});
+        
+        int p = 2000;
+        int value = 0;
+        int now = 0;
+        for(int i = 0; i < s.size(); i++){
+            now = mci[s.at(i)];
+            value += now;
+            if(now > p){
+                value -= 2*p;
+            }
+            p = mci[s.at(i)];
+        }
+        return value;
+    }
+}
+```
