--- a/数字技巧题.md
+++ b/数字技巧题.md
@@ -65,7 +65,7 @@ vector<int> twoSum(vector<int>& nums, int target) {
 性能分析：0(n)<br>
 空间维护一个map或者hashmap。
 
-# 罗马字符转成数字（Roman to Integer）
+# 2.罗马字符转成数字（Roman to Integer）
 
 Roman numerals are represented by seven different symbols: I, V, X, L, C, D and M.
 ```
@@ -241,4 +241,68 @@ public:
         return value;
     }
 }
+```
+
+# 数字转罗马字符（Integer to Roman）
+直接解析法：
+``` c++
+class Solution {
+public:
+    string intToRoman(int num) {
+        
+        if(num >= 1000){
+            return "M" + intToRoman(num - 1000);
+        }
+        
+        if(num >= 900){
+            return "CM" + intToRoman(num - 900);
+        }
+        
+        if(num >= 500){
+            return "D" + intToRoman(num - 500);
+        }
+        
+        if(num >= 400){
+            return "CD" + intToRoman(num - 400);
+        }
+        
+        if(num >= 100){
+            return "C" + intToRoman(num - 100);
+        }
+        
+        if(num >= 90){
+            return "XC" + intToRoman(num - 90);
+        }
+        
+        if(num >= 50){
+            return "L" + intToRoman(num - 50);
+        }
+        
+        if(num >= 40){
+            return "XL" + intToRoman(num - 40);
+        }
+        
+        if(num >= 10){
+            return "X" + intToRoman(num - 10);
+        }
+        
+        if(num >= 9){
+            return "IX" + intToRoman(num - 9);
+        }
+        
+        if(num >= 5){
+            return "V" + intToRoman(num - 5);
+        }
+        
+        if(num >= 4){
+            return "IV" + intToRoman(num - 4);
+        }
+        
+        if(num >= 1){
+            return "I" + intToRoman(num - 1);
+        }
+        
+        return "";
+    }
+};
 ```
