--- a/数字技巧题.md
+++ b/数字技巧题.md
@@ -87,8 +87,7 @@ X can be placed before L (50) and C (100) to make 40 and 90.
 C can be placed before D (500) and M (1000) to make 400 and 900.
 Given a roman numeral, convert it to an integer. Input is guaranteed to be within the range from 1 to 3999.
 
-## 解法一
-直接解析分析方法
+## 解法一 直接解析分析方法
 
 ``` c++
 class Solution {
@@ -201,8 +200,7 @@ public:
 };
 ```
 
-## 解法二
-技巧解法。
+## 解法二 技巧解法
 普通解析针对于I，X, C 都需要两个一块先解析，如果匹配对应的两个字符，直接添加对应数值，否则就添加单个对应数值。
 ```
 I can be placed before V (5) and X (10) to make 4 and 9. 
@@ -243,8 +241,8 @@ public:
 }
 ```
 
-# 数字转罗马字符（Integer to Roman）
-直接解析法：
+# 3.数字转罗马字符（Integer to Roman）
+## 直接解析法：
 ``` c++
 class Solution {
 public:
